# easy_wordle

./: README.md  explore.ipynb  pyproject.toml
data/: word_freq.json
easy_wordle/: wordle.py
tests/: test_easy_wordle.py
