[tool.poetry]
name = "easy_wordle"
version = "0.1.0"
description = ""
authors = ["ezra citron <ezracitron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.7.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

